# ShopRLVE-Gym

./: README.md  pyproject.toml
scripts/: build_embeddings.py  build_faiss_index.py  evaluate.py  generate_cart_samples.py  generate_trajectories.py  generate_trajectories_phoenix.py  json_to_hf_dataset.py  make_mini_catalog.py  run_debug.py  test_flow.py  train.py  train_openenv.py
space/: .env.example  README.md  app.py  app_old.py  policies.json  requirements.txt
src/ecom_rlve/: __init__.py
src/ecom_rlve/data/: __init__.py  catalog_loader.py  embeddings.py  index.py  schema.py
src/ecom_rlve/debug/: __init__.py  inspector.py  replay.py  validators.py
src/ecom_rlve/difficulty/: __init__.py  adaptive.py  mapping.py
src/ecom_rlve/envs/: __init__.py  base.py  bundle.py  cart.py  journey.py  order_status.py  policy_qa.py  product_discovery.py  returns.py  substitution.py
src/ecom_rlve/rewards/: __init__.py  composer.py  metrics.py  verifiers.py
src/ecom_rlve/server/: __init__.py  openenv.py  state.py
src/ecom_rlve/simulator/: __init__.py  dialogue.py  llm_backend.py  persona.py  templates.py
src/ecom_rlve/tools/: __init__.py  cart.py  catalog.py  datetime_tool.py  orders.py  policy.py  registry.py  returns.py  user.py
src/ecom_rlve/training/: __init__.py  collections.py  grpo.py  rollout.py
src/shop_rlve/: __init__.py
src/shop_rlve/data/: __init__.py  catalog_loader.py  embeddings.py  index.py  schema.py
src/shop_rlve/debug/: __init__.py  inspector.py  replay.py  validators.py
src/shop_rlve/difficulty/: __init__.py  mapping.py
(+32 files in other folders)
